--- a/home.html
+++ b/home.html
@@ -4,7 +4,146 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style1.css">
+    <!-- <link rel="stylesheet" href="style1.css"> -->
+    <style>
+            
+    body {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f7f6;
+        color: #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        flex-direction: column;
+    }
+
+
+    .container {
+        background-color: white;
+        padding: 40px;
+        width: 350px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        border-radius: 10px;
+        text-align: center;
+        margin: 20px;
+    }
+
+
+    header {
+        background-color: rgb(80, 189, 225);
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+        font-size: 2.5em;
+        color: white;
+        position: fixed;
+        top: 0;
+    }
+
+    main {
+        margin-top: 100px;
+    }
+
+
+    .btn, .continue-btn, .signup-btn {
+        width: 100%;
+        padding: 15px;
+        font-size: 1em;
+        color: white;
+        background-color: rgb(80, 189, 225);
+        border: none;
+        border-radius: 30px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        text-decoration: none;
+        display: inline-block;
+        margin: 10px 0;
+    }
+
+    .btn:hover, .continue-btn:hover, .signup-btn:hover {
+        background-color: rgb(80, 1, 255);
+    }
+
+
+    input[type="email"], input[type="password"], input[type="text"] {
+        width: 100%;
+        padding: 15px;
+        margin: 10px 0;
+        font-size: 1em;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+    }
+
+
+    .or-divider {
+        margin: 20px 0;
+        color: #666;
+        position: relative;
+    }
+
+    .or-divider:before, .or-divider:after {
+        content: '';
+        display: block;
+        width: 40%;
+        height: 1px;
+        background-color: #ccc;
+        position: absolute;
+        top: 50%;
+    }
+
+    .or-divider:before {
+        left: 0;
+    }
+
+    .or-divider:after {
+        right: 0;
+    }
+
+
+    footer {
+        text-align: center;
+        margin-top: 40px;
+        padding: 10px;
+        background-color: rgb(80, 189, 225);
+        color: white;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+
+
+    .social-buttons {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .social-btn {
+        width: 40px;
+        height: 40px;
+        display: inline-block;
+    }
+
+    .social-logo {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+
+    .signup-text a {
+        color: #4CAF50;
+        text-decoration: none;
+    }
+
+    .signup-text a:hover {
+        text-decoration: underline;
+    }
+
+    </style>
 </head>
 
 <body>
@@ -16,8 +155,8 @@
     <main class="container">
         <h1>Welcome!</h1>
         <p>Quickly diagnose common skin conditions with our AI-powered platform. Login or Signup to get started!</p>
-        <a href="login.html" class="btn">Login</a>
-        <a href="signup.html" class="btn">Sign Up</a>
+        <a href="/login" class="btn">Login</a>
+        <a href="/register" class="btn">Sign Up</a>
     </main>
     
     <footer>
