--- a/profile.html
+++ b/profile.html
@@ -197,6 +197,13 @@
                     {% endif %}
                 </p>
             </div>
+            <div style="width: 500px;">
+                <p style="text-align: center; font-weight: bold; font-size: 24px;">Skin Disease Diagnosis: 
+                    {% if obj1 %}
+                        {{ obj1 }}
+                    {% endif %}
+                </p>
+            </div>
     </main>
 
     <footer>
